--- a/atiny/requirements.txt
+++ b/atiny/requirements.txt
@@ -1,11 +1,18 @@
 # http full
-dnspython
-ujson
+# MyRequestsHTTP
 requests
-responses
-aresponses
-aiohttp
+requests[socks]
 urllib3
-websockets
+PySocks
+
+# aiohttp
+aiohttp
 aiosocksy
 aiohttp_socks
+
+# other
+dnspython
+ujson
+responses
+aresponses
+websockets
